// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test adding custom config 1`] = `
{
  "Parameters": {
    "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fArtifactHash33F16319": {
      "Description": "Artifact hash for asset "5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8f"",
      "Type": "String",
    },
    "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fS3Bucket1994F24D": {
      "Description": "S3 bucket for asset "5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8f"",
      "Type": "String",
    },
    "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fS3VersionKeyAFC9A9D3": {
      "Description": "S3 key for asset version "5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8f"",
      "Type": "String",
    },
    "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273ArtifactHashCCAEE650": {
      "Description": "Artifact hash for asset "c4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273"",
      "Type": "String",
    },
    "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273S3BucketCB8199FB": {
      "Description": "S3 bucket for asset "c4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273"",
      "Type": "String",
    },
    "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273S3VersionKey952CDC07": {
      "Description": "S3 key for asset version "c4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273"",
      "Type": "String",
    },
  },
  "Resources": {
    "TestConfigDFE7B72C": {
      "Properties": {
        "CompatibleRuntimes": [
          "nodejs14.x",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273S3BucketCB8199FB",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273S3VersionKey952CDC07",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273S3VersionKey952CDC07",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "TestConfigPythonLibLayer672F8799": {
      "Properties": {
        "CompatibleRuntimes": [
          "python3.8",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fS3Bucket1994F24D",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fS3VersionKeyAFC9A9D3",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fS3VersionKeyAFC9A9D3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
  },
}
`;

exports[`visting node lambda runtimes and adding aspects 1`] = `
{
  "Parameters": {
    "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fArtifactHash33F16319": {
      "Description": "Artifact hash for asset "5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8f"",
      "Type": "String",
    },
    "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fS3Bucket1994F24D": {
      "Description": "S3 bucket for asset "5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8f"",
      "Type": "String",
    },
    "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fS3VersionKeyAFC9A9D3": {
      "Description": "S3 key for asset version "5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8f"",
      "Type": "String",
    },
    "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273ArtifactHashCCAEE650": {
      "Description": "Artifact hash for asset "c4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273"",
      "Type": "String",
    },
    "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273S3BucketCB8199FB": {
      "Description": "S3 bucket for asset "c4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273"",
      "Type": "String",
    },
    "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273S3VersionKey952CDC07": {
      "Description": "S3 key for asset version "c4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273"",
      "Type": "String",
    },
    "AssetParametersea3ad9472721d25378ce14217829f6bde3a370e071a7e7235112ebfc1eaf6174ArtifactHash17905783": {
      "Description": "Artifact hash for asset "ea3ad9472721d25378ce14217829f6bde3a370e071a7e7235112ebfc1eaf6174"",
      "Type": "String",
    },
    "AssetParametersea3ad9472721d25378ce14217829f6bde3a370e071a7e7235112ebfc1eaf6174S3Bucket52FCDB8B": {
      "Description": "S3 bucket for asset "ea3ad9472721d25378ce14217829f6bde3a370e071a7e7235112ebfc1eaf6174"",
      "Type": "String",
    },
    "AssetParametersea3ad9472721d25378ce14217829f6bde3a370e071a7e7235112ebfc1eaf6174S3VersionKey131506C4": {
      "Description": "S3 key for asset version "ea3ad9472721d25378ce14217829f6bde3a370e071a7e7235112ebfc1eaf6174"",
      "Type": "String",
    },
  },
  "Resources": {
    "testConfigWithNodeDDA76C99": {
      "Properties": {
        "CompatibleRuntimes": [
          "nodejs14.x",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273S3BucketCB8199FB",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273S3VersionKey952CDC07",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273S3VersionKey952CDC07",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": {
      "Properties": {
        "CompatibleRuntimes": [
          "python3.8",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fS3Bucket1994F24D",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fS3VersionKeyAFC9A9D3",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fS3VersionKeyAFC9A9D3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": {
      "DependsOn": [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "AssetParametersea3ad9472721d25378ce14217829f6bde3a370e071a7e7235112ebfc1eaf6174S3Bucket52FCDB8B",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersea3ad9472721d25378ce14217829f6bde3a370e071a7e7235112ebfc1eaf6174S3VersionKey131506C4",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersea3ad9472721d25378ce14217829f6bde3a370e071a7e7235112ebfc1eaf6174S3VersionKey131506C4",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": {
          "Variables": {
            "AWS_SDK_USER_AGENT": "{ "customUserAgent": "AwsSolution/undefined/undefined" }",
          },
        },
        "Handler": "index.handler",
        "Layers": [
          {
            "Ref": "testConfigWithNodeDDA76C99",
          },
        ],
        "Role": {
          "Fn::GetAtt": [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "nodejs14.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;

exports[`visting node python runtimes and adding aspects 1`] = `
{
  "Parameters": {
    "AssetParameters11024bddf59dd9dcdff1d72000ce8f8c7f2b8802fe65225c235c1867b1a2de71ArtifactHashF29726D4": {
      "Description": "Artifact hash for asset "11024bddf59dd9dcdff1d72000ce8f8c7f2b8802fe65225c235c1867b1a2de71"",
      "Type": "String",
    },
    "AssetParameters11024bddf59dd9dcdff1d72000ce8f8c7f2b8802fe65225c235c1867b1a2de71S3Bucket1CAD3850": {
      "Description": "S3 bucket for asset "11024bddf59dd9dcdff1d72000ce8f8c7f2b8802fe65225c235c1867b1a2de71"",
      "Type": "String",
    },
    "AssetParameters11024bddf59dd9dcdff1d72000ce8f8c7f2b8802fe65225c235c1867b1a2de71S3VersionKey276B7FB0": {
      "Description": "S3 key for asset version "11024bddf59dd9dcdff1d72000ce8f8c7f2b8802fe65225c235c1867b1a2de71"",
      "Type": "String",
    },
    "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fArtifactHash33F16319": {
      "Description": "Artifact hash for asset "5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8f"",
      "Type": "String",
    },
    "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fS3Bucket1994F24D": {
      "Description": "S3 bucket for asset "5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8f"",
      "Type": "String",
    },
    "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fS3VersionKeyAFC9A9D3": {
      "Description": "S3 key for asset version "5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8f"",
      "Type": "String",
    },
    "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273ArtifactHashCCAEE650": {
      "Description": "Artifact hash for asset "c4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273"",
      "Type": "String",
    },
    "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273S3BucketCB8199FB": {
      "Description": "S3 bucket for asset "c4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273"",
      "Type": "String",
    },
    "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273S3VersionKey952CDC07": {
      "Description": "S3 key for asset version "c4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273"",
      "Type": "String",
    },
  },
  "Resources": {
    "testConfigWithNodeDDA76C99": {
      "Properties": {
        "CompatibleRuntimes": [
          "nodejs14.x",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273S3BucketCB8199FB",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273S3VersionKey952CDC07",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParametersc4e15dd7f83d9390dc047c3b527b2830f6aa3de42cba651198898b53e4c63273S3VersionKey952CDC07",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer configures AWS Node SDK initialization",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testConfigWithNodePythonLibLayer75C81C17": {
      "Properties": {
        "CompatibleRuntimes": [
          "python3.8",
        ],
        "Content": {
          "S3Bucket": {
            "Ref": "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fS3Bucket1994F24D",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fS3VersionKeyAFC9A9D3",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters5d9cce5b4b79ed45f3f90f947725a868712c56c0fac859183f3f1688c05e6f8fS3VersionKeyAFC9A9D3",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Description": "This layer has boto config initialization and logging functions",
      },
      "Type": "AWS::Lambda::LayerVersion",
    },
    "testFunction483F4CBE": {
      "DependsOn": [
        "testFunctionServiceRoleFEC29B6F",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Ref": "AssetParameters11024bddf59dd9dcdff1d72000ce8f8c7f2b8802fe65225c235c1867b1a2de71S3Bucket1CAD3850",
          },
          "S3Key": {
            "Fn::Join": [
              "",
              [
                {
                  "Fn::Select": [
                    0,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters11024bddf59dd9dcdff1d72000ce8f8c7f2b8802fe65225c235c1867b1a2de71S3VersionKey276B7FB0",
                        },
                      ],
                    },
                  ],
                },
                {
                  "Fn::Select": [
                    1,
                    {
                      "Fn::Split": [
                        "||",
                        {
                          "Ref": "AssetParameters11024bddf59dd9dcdff1d72000ce8f8c7f2b8802fe65225c235c1867b1a2de71S3VersionKey276B7FB0",
                        },
                      ],
                    },
                  ],
                },
              ],
            ],
          },
        },
        "Environment": {
          "Variables": {
            "AWS_SDK_USER_AGENT": "{ "user_agent_extra": "AwsSolution/undefined/undefined" }",
          },
        },
        "Handler": "handler",
        "Layers": [
          {
            "Ref": "testConfigWithNodePythonLibLayer75C81C17",
          },
        ],
        "Role": {
          "Fn::GetAtt": [
            "testFunctionServiceRoleFEC29B6F",
            "Arn",
          ],
        },
        "Runtime": "python3.8",
      },
      "Type": "AWS::Lambda::Function",
    },
    "testFunctionServiceRoleFEC29B6F": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
  },
}
`;
